--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="../Back-end/images/vcam_2.jpg" alt="Arsenal">
+                    <img class="first-slide" src="./Back-end/images/vcam_2.jpg" alt="Arsenal">
                     <div class="container">
                         <div class="carousel-caption text-left">
                             <h1>Appareil photo reflex</h1>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="../Back-end/images/vcam_4.jpg" alt="Dorsoduro">
+                    <img class="second-slide" src="./Back-end/images/vcam_4.jpg" alt="Dorsoduro">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Appareil photo hybride</h1>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="../Back-end/images/vcam_1.jpg" alt="San Marco">
+                    <img class="third-slide" src="./Back-end/images/vcam_1.jpg" alt="San Marco">
                     <div class="container">
                         <div class="carousel-caption text-right">
                             <h1>Appareil photo compact</h1>
