--- a/confirm.html
+++ b/confirm.html
@@ -38,12 +38,8 @@
         </div>
     </header>
     <main class="container">
-        <div id="main" class="row">
-            <div class="col-12 text-center commande">
-                <p>Merci de nous avoir fait confiance !</p>
-                <p>Votre colis vous sera expédié dans les meilleurs délais</p>
-                <p>N° de command : <span id="numCom"></span></p>
-            </div>
+        <div id="main" class="row mt-5">
+
         </div>
     </main>
     <footer class="bg-dark text-light fixed-bottom py-4">
