--- a/produit.html
+++ b/produit.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/carousel.css">
 
     <script src="produit.js" defer></script>
-    <title>Oricono</title>
+    <title>La page de produit Oricono</title>
 </head>
 
 <body>
