--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/carousel.css">
 
     <script src="index.js" defer></script>
-    <title>Oricono</title>
+    <title>La page d'accueil Oricono</title>
 </head>
 
 <body>
@@ -89,21 +89,7 @@
             <div class="container">
                 <h1 id="notreCollection">Notre sélection d'appareils photo vintages</h1>
                 <div class="row" id="main">
-                    <!--<div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="Back-end/images/vcam_1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Bibendum Aenean Fringilla Tortor.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Acheter</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> 1599.90 €  </button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!--
                 -->
                 </div>
             </div>
